# bill-tracker

./: .gitignore  Cargo.toml  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js
model/: Cargo.toml  README.md  all.html  fn.init_logging.html  index.html  macro.array.html  sidebar-items.js  struct.Array.html  trait.Length.html
model/db/: fn.setup.html  fn.update.html  index.html  sidebar-items.js  struct.Options.html  type.Connection.html
model/graphql/: attr.Object.html  derive.InputObject.html  derive.OneofObject.html  derive.Query.html  derive.SimpleObject.html  index.html  sidebar-items.js  struct.EmptyFields.html  struct.EmptyMutation.html  struct.EmptySubscription.html  struct.Schema.html  trait.InputType.html  trait.ObjectType.html  trait.OutputType.html  type.Context.html  type.Result.html
model/graphql/backend/: index.html  sidebar-items.js  struct.Edge.html  struct.PageRequest.html  trait.Connection.html  trait.DataSource.html  type.Cursor.html  type.Many.html  type.Paginated.html
model/graphql/connection/: fn.query.html  fn.query_with.html  index.html  struct.Connection.html  struct.DefaultConnectionName.html  struct.DefaultEdgeName.html  struct.DisableNodesField.html  struct.Edge.html  struct.EmptyFields.html  struct.EnableNodesField.html  struct.OpaqueCursor.html  struct.PageInfo.html  trait.ConnectionNameType.html  trait.CursorType.html  trait.EdgeNameType.html  trait.NodesFieldSwitcherSealed.html
model/graphql/prelude/: attr.Object.html  derive.Class.html  derive.Query.html  derive.Resource.html  index.html  macro.value.html  sidebar-items.js  struct.EmptyMutation.html  struct.EmptySubscription.html  struct.Schema.html
model/graphql/scalars/: enum.IntCmpOp.html  enum.IntPredicate.html  enum.PluralPredicate.html  enum.StringPredicate.html  enum.Value.html  index.html  sidebar-items.js  struct.IntCmp.html  struct.Quantified.html
model/graphql/schema/: fn.generate.html  index.html  sidebar-items.js  struct.Bill.html  struct.District.html  struct.Issue.html  struct.Legislator.html  struct.Party.html  struct.Query.html  struct.State.html
model/legiscan/: enum.Party.html  enum.State.html  enum.Status.html  index.html  sidebar-items.js  struct.Client.html  struct.LocalClient.html  struct.Name.html  struct.PartyIter.html  struct.StateIter.html  trait.Bill.html  trait.Dataset.html  trait.DatasetMetadata.html  trait.Legiscan.html  trait.Person.html
model/schema/: fn.executor.html  fn.generate.html  index.html  sidebar-items.js  struct.Bill.html  struct.District.html  struct.Issue.html  struct.Legislator.html  struct.Party.html  struct.Query.html  struct.State.html
model/sql/: enum.PostgreSqlError.html  index.html  sidebar-items.js  struct.PostgreSqlConnection.html  struct.PostgreSqlCursor.html  struct.PostgreSqlDataSource.html
model/src/: db.rs  graphql.rs  legiscan.rs  lib.rs  schema.rs  sql.rs
server/: Cargo.toml  all.html  index.html
server/src/: lib.rs  main.rs  test_runner.rs
(+526 files in other folders)
