[package]
name = "model"
version = "0.1.0"
edition = "2021"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]

[features]
default = ["clap"]

[[bin]]
name = "gen-schema"
required-features = ["clap"]

[dependencies]
relational-graphql = { git = "https://github.com/jbearer/relational-graphql.git" }

# Bin dependencies
clap = { version = "4.2", features = ["derive"], optional = true }

[dev-dependencies]
async-std = "1.12"
