[package]
name = "model"
version = "0.1.0"
edition = "2021"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]

[dependencies]
anyhow = "1.0"
async-std = "1.12"
async-trait = "0.1"
base64 = "0.21"
clap = { version = "4.2", features = ["derive", "env"] }
copy_dir = "0.1"
derive_more = "0.99"
futures = "0.3"
relational-graphql = { git = "https://github.com/jbearer/relational-graphql.git" }
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
surf = "2.3"
tracing = "0.1"
zip = "0.6"

[dev-dependencies]
async-std = "1.12"
