[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]

[dependencies]
async-graphql-tide = "5.0"
async-std = "1.12"
clap = { version = "4.2", features = ["derive", "env"] }
model = { path = "../model" }
relational-graphql = { git = "https://github.com/jbearer/relational-graphql.git" }
tide = "0.16"

[dev-dependencies]
ansi_term = "0.12"
anyhow = "1.0"
futures = "0.3"
model = { path = "../model", features = ["testing"] }
portpicker = "0.1"
serde_json = "1.0"
surf = "2.3"
tracing = "0.1"
